--- a/trainGPU/makeTFREC.ipynb
+++ b/trainGPU/makeTFREC.ipynb
@@ -21,52 +21,29 @@
    "outputs": [],
    "source": [
     "INPUT_DIR = \"../input/g2net-gravitational-wave-detection\"\n",
-    "train_x = np.load(f\"{INPUT_DIR}/train_x.npy\")\n",
-    "train_y = np.load(f\"{INPUT_DIR}/train_y.npy\")\n",
-    "test_x = np.load(f\"{INPUT_DIR}/test_x.npy\")"
+    "train_x = np.load(f\"{INPUT_DIR}/train_x_whitened.npy\")\n",
+    "train_y = np.load(f\"{INPUT_DIR}/train_y_whitened.npy\")\n",
+    "test_x = np.load(f\"{INPUT_DIR}/test_x_whitened.npy\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "1904d6c8",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "34999\n",
-      "69999\n",
-      "104999\n",
-      "139999\n",
-      "174999\n",
-      "209999\n",
-      "244999\n",
-      "279999\n",
-      "314999\n",
-      "349999\n",
-      "384999\n",
-      "419999\n",
-      "454999\n",
-      "489999\n",
-      "524999\n",
-      "559999\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "973df068",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1874348db6854cbe9d9fe264c4af5489",
+       "model_id": "6a905301d26b4b1bba62bdc6db33050d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -80,7 +57,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "9fc0b9a4002241ed91ea84932ae2dd6e",
+       "model_id": "dfd3acac534a459ba9811de8c0585b5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -94,7 +71,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4b8cb78f32e245d7839082be2ad248c3",
+       "model_id": "60a5e121a8aa4c2582acbcbca66b57ef",
        "version_major": 2,
        "version_minor": 0
       },
@@ -108,7 +85,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "db1de1fdf55c4dc8a5f527a8cf86d608",
+       "model_id": "8de444e5bc3d413889ae5470ba6de13d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -122,7 +99,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c5802d68aaca45bca5c1313c28f969d1",
+       "model_id": "bdb44a0b18e0425e8475531221207566",
        "version_major": 2,
        "version_minor": 0
       },
@@ -136,7 +113,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "81869ed946474aca919c30243b7c190f",
+       "model_id": "0435036b77434d618db2814efeff0ff3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -150,7 +127,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e6cd0aa08da544869cebfa174312a0d8",
+       "model_id": "12bcce0fe26d4574ae8758bdff10653e",
        "version_major": 2,
        "version_minor": 0
       },
@@ -164,7 +141,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d61b2e9d58d489e9fdfd09365956a7b",
+       "model_id": "864b5cc029a948a1a2c20f1895ee9fa6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -178,7 +155,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "23f5ea6cf3fc4c5787440cf9e05cd8e2",
+       "model_id": "ec46a1137fc94e698c4bc86e18b07282",
        "version_major": 2,
        "version_minor": 0
       },
@@ -192,7 +169,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "22a59509578a4a37a12442e379388455",
+       "model_id": "bbcde2bef8314c97819921aeeb0e587c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -206,7 +183,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "e36409f9b7da41b48411aeb3bac7651d",
+       "model_id": "3fd9bb6f7ddc4e2681ae1b3c12e16dc3",
        "version_major": 2,
        "version_minor": 0
       },
@@ -220,7 +197,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "0d5c9027c7f64f04a0d47ae43980f148",
+       "model_id": "a60f062011274c1baa30f38c24b4a135",
        "version_major": 2,
        "version_minor": 0
       },
@@ -234,7 +211,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2a05072fe5594da988ae2606ab0b1631",
+       "model_id": "97bef26a7afe467a9029a3673f87311a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -248,7 +225,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "b97ee73d4a8f423dbe3114ff4dd0d714",
+       "model_id": "b1d7fcb0e78c4721ba3d6c0e7468c372",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,7 +239,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "7edb4553f568441ab28d749d0dc334e0",
+       "model_id": "d5326cd62df34b4fba5e1535144cf4a9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -276,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bad5931347a14b069ce06863fcd9180f",
+       "model_id": "e21817c8f7ef44b687c4b5dcfb9890e9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -290,7 +267,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "10cb8c7b1c7f49ce936c184b10fbec5c",
+       "model_id": "bee51c58058d4941b291a185a1ffe0a6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -310,7 +287,7 @@
     "    rng = (range(i * batch_size, (i+1)*batch_size))\n",
     "    tr_x = train_x[rng]\n",
     "    tr_y = train_y[rng]\n",
-    "    output_file = f\"train_{i}.tfrec\"\n",
+    "    output_file = f\"train_{i}_whitened.tfrec\"\n",
     "    writer = tf.io.TFRecordWriter(output_file)\n",
     "    for i in tqdm(range(tr_x.shape[0])):\n",
     "        X = tr_x[i]\n",
@@ -329,68 +306,25 @@
     "        writer.write(serialized)\n",
     "    writer.close()\n"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
-   "id": "e0e4f261",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "28250.0"
-      ]
-     },
-     "execution_count": 14,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": []
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "6a9b569b",
+   "id": "e0e4f261",
    "metadata": {},
    "outputs": [],
-   "source": [
-    "batches = 8\n",
-    "batch_size = test_x.shape[0] // batches\n",
-    "for i in tqdm(range(batches)):\n",
-    "    rng = (range(i * batch_size, (i+1)*batch_size))\n",
-    "    tr_x = test_x[rng]\n",
-    "    output_file = f\"train_{i}.tfrec\"\n",
-    "    writer = tf.io.TFRecordWriter(output_file)\n",
-    "    for i in tqdm(range(tr_x.shape[0])):\n",
-    "        X = tr_x[i]\n",
-    "        y = tr_y[i]\n",
-    "\n",
-    "        # Feature contains a map of string to feature proto objects\n",
-    "        feature = {}\n",
-    "        feature[\"X\"] = tf.train.Feature(float_list=tf.train.FloatList(value=X.flatten()))\n",
-    "        feature[\"y\"] = tf.train.Feature(int64_list=tf.train.Int64List(value=[y]))\n",
-    "\n",
-    "        #contruct the Example proto object\n",
-    "        example = tf.train.Example(features=tf.train.Features(feature=feature))\n",
-    "        serialized = example.SerializeToString()\n",
-    "\n",
-    "        # write the serialized object to disk\n",
-    "        writer.write(serialized)\n",
-    "    writer.close()\n"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 4,
    "id": "4dc30db0",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "1e27abc603024c1f83373840d850ebd3",
+       "model_id": "e3ceaa91d8f84ef5a734031de2e1d76d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -403,7 +337,7 @@
     }
    ],
    "source": [
-    "output_file = \"test_x.tfrec\"\n",
+    "output_file = \"test_x_whitened.tfrec\"\n",
     "writer = tf.io.TFRecordWriter(output_file)\n",
     "for i in tqdm(range(test_x.shape[0])):\n",
     "    X = test_x[i]\n",
