--- a/experimental/RandomDataset.ipynb
+++ b/experimental/RandomDataset.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "a8789e89",
    "metadata": {},
    "outputs": [],
@@ -11,13 +11,13 @@
     "from glob import glob\n",
     "import shutil\n",
     "import random\n",
-    "INPUT_FOLDER = \"../input/ggwp/output\"\n",
+    "INPUT_FOLDER = \"../input/ggwp/output1\"\n",
     "OUTPUT_FOLDER = \"../input/ggwp_sample\""
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "73916f70",
    "metadata": {},
    "outputs": [],
@@ -31,12 +31,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "id": "74861b3d",
    "metadata": {},
    "outputs": [],
    "source": [
-    "file_list = random.sample(glob(f\"{INPUT_FOLDER}/V1/*.hdf\"),50)\n",
+    "file_list = random.sample(glob(f\"{INPUT_FOLDER}/V1/*.hdf\"),100)\n",
     "for v1_path in file_list:\n",
     "    v1_path = v1_path.replace(\"\\\\\",\"/\")\n",
     "    h1_path = v1_path.replace(\"V1\",(\"H1\"))\n",
