--- a/experimental/TrainPreFilter.ipynb
+++ b/experimental/TrainPreFilter.ipynb
@@ -5,16 +5,7 @@
    "execution_count": 1,
    "id": "acbe8695",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "INFO:tensorflow:Mixed precision compatibility check (mixed_float16): OK\n",
-      "Your GPU will likely run quickly with dtype policy mixed_float16 as it has compute capability of at least 7.0. Your GPU: NVIDIA GeForce RTX 3090, compute capability 8.6\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# General\n",
     "import os\n",
@@ -55,17 +46,6 @@
   },
   {
    "cell_type": "raw",
-   "id": "3a1d62d5",
-   "metadata": {},
-   "source": [
-    "model = tf.keras.Sequential([\n",
-    "    layers.Input()\n",
-    "    \n",
-    "])"
-   ]
-  },
-  {
-   "cell_type": "raw",
    "id": "8f5ed7ad",
    "metadata": {},
    "source": [
@@ -97,6 +77,37 @@
   {
    "cell_type": "code",
    "execution_count": 4,
+   "id": "cdaaa931",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def random_cut(x,y):\n",
+    "    tensor = x\n",
+    "    tensor_y = y\n",
+    "    maxVal=128\n",
+    "    dt = tf.random.uniform(shape=[],minval=2, maxval=maxVal, dtype=tf.int32)\n",
+    "    t0 = tf.random.uniform(shape=[],minval=1, maxval=dt, dtype=tf.int32)\n",
+    "    t1 = tf.random.uniform(shape=[],minval=0, maxval=t0, dtype=tf.int32)\n",
+    "    paddings =  [\n",
+    "        [0,0],\n",
+    "        [t1,dt-t1],\n",
+    "        [0,0]\n",
+    "    ]\n",
+    "    tensor = tf.pad(tensor[:,t0:t0+(4096-dt)], paddings=paddings)\n",
+    "    tensor_y = tf.pad(tensor_y[:,t0:t0+4096-dt], paddings=paddings)\n",
+    "    tensor = tf.reshape(tensor,[Params[\"batch_size\"], 4096, 3])\n",
+    "    tensor_y = tf.reshape(tensor_y,[Params[\"batch_size\"], 4096, 3])\n",
+    "        \n",
+    "    \n",
+    "    tensor = tf.cast(tensor, tf.float32)\n",
+    "    tensor_y = tf.cast(tensor_y, tf.float32)\n",
+    "    \n",
+    "    return tensor, tensor_y"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
    "id": "21882e11",
    "metadata": {},
    "outputs": [],
@@ -116,6 +127,7 @@
     "    dataset = dataset.repeat()\n",
     "    dataset = dataset.shuffle(buffer_size=10000, reshuffle_each_iteration=True)\n",
     "    dataset = dataset.batch(Params[\"batch_size\"])\n",
+    "    dataset = dataset.map(random_cut, num_parallel_calls=AUTO)\n",
     "#     dataset = dataset.cache()\n",
     "    dataset = dataset.prefetch(AUTO)\n",
     "    return dataset"
@@ -123,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "id": "e38d9a44",
    "metadata": {},
    "outputs": [],
@@ -133,14 +145,14 @@
     "    val_files = []\n",
     "    for distance in distances:\n",
     "        data_files = glob(f\"../input/synthetic-tfrec/train_{distance}*.tfrec\")\n",
-    "        train_files.extend(data_files[:-2])\n",
-    "        val_files.extend(data_files[-2:])\n",
+    "        train_files.extend(data_files[:-1])\n",
+    "        val_files.extend(data_files[-1:])\n",
     "    return train_files, val_files"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "id": "4a434860",
    "metadata": {
     "scrolled": true
@@ -155,12 +167,14 @@
        " '../input/synthetic-tfrec\\\\train_100_12500_03.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_100_12500_04.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_100_12500_05.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_100_12500_06.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_150_12500_00.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_150_12500_01.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_150_12500_02.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_150_12500_03.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_150_12500_04.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_150_12500_05.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_150_12500_06.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_200_12500_00.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_200_12500_01.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_200_12500_02.tfrec',\n",
@@ -175,6 +189,15 @@
        " '../input/synthetic-tfrec\\\\train_200_2_12500_03.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_200_2_12500_04.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_200_2_12500_05.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_2_12500_06.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_2_12500_07.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_3_12500_00.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_3_12500_01.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_3_12500_02.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_3_12500_03.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_3_12500_04.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_3_12500_05.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_200_3_12500_06.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_250_12500_00.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_250_12500_01.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_250_12500_02.tfrec',\n",
@@ -189,6 +212,7 @@
        " '../input/synthetic-tfrec\\\\train_250_2_12500_03.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_250_2_12500_04.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_250_2_12500_05.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_250_2_12500_06.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_300_12500_00.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_300_12500_01.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_300_12500_02.tfrec',\n",
@@ -210,16 +234,18 @@
        " '../input/synthetic-tfrec\\\\train_300_3_12500_02.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_300_3_12500_03.tfrec',\n",
        " '../input/synthetic-tfrec\\\\train_300_3_12500_04.tfrec',\n",
-       " '../input/synthetic-tfrec\\\\train_300_3_12500_05.tfrec']"
+       " '../input/synthetic-tfrec\\\\train_300_3_12500_05.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_300_3_12500_06.tfrec',\n",
+       " '../input/synthetic-tfrec\\\\train_350_12500_00.tfrec']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "train_files,val_files = get_dataset_files([100,150,200,250,300])\n",
+    "train_files,val_files = get_dataset_files([100,150,200,250,300,350])\n",
     "train_ds = load_dataset(train_files)\n",
     "val_ds = load_dataset(val_files)\n",
     "train_files"
@@ -275,7 +301,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "id": "9cf72642",
    "metadata": {},
    "outputs": [
@@ -292,7 +318,7 @@
        "       [[0., 0., 0., 1.]]], dtype=float32)>"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,7 +337,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "3c6a7b07",
+   "id": "fcf8ddd4",
    "metadata": {},
    "source": [
     "def ownInitializer(shape, dtype=None):\n",
@@ -327,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "id": "55a3c709",
    "metadata": {
     "scrolled": true
@@ -337,7 +363,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\apist\\AppData\\Local\\Temp/ipykernel_16864/3652148574.py:16: The name tf.keras.layers.CuDNNLSTM is deprecated. Please use tf.compat.v1.keras.layers.CuDNNLSTM instead.\n",
+      "WARNING:tensorflow:From C:\\Users\\apist\\AppData\\Local\\Temp/ipykernel_29160/2700824021.py:16: The name tf.keras.layers.CuDNNLSTM is deprecated. Please use tf.compat.v1.keras.layers.CuDNNLSTM instead.\n",
       "\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
@@ -347,13 +373,15 @@
       "_________________________________________________________________\n",
       "reshape (Reshape)            (None, 4096, 12, 1)       0         \n",
       "_________________________________________________________________\n",
-      "time_distributed (TimeDistri (None, 4096, 12, 32)      128       \n",
+      "time_distributed (TimeDistri (None, 4096, 12, 32)      192       \n",
       "_________________________________________________________________\n",
-      "time_distributed_1 (TimeDist (None, 4096, 6, 32)       0         \n",
+      "time_distributed_1 (TimeDist (None, 4096, 12, 32)      5152      \n",
       "_________________________________________________________________\n",
-      "time_distributed_2 (TimeDist (None, 4096, 6, 16)       1552      \n",
+      "time_distributed_2 (TimeDist (None, 4096, 6, 32)       0         \n",
       "_________________________________________________________________\n",
-      "time_distributed_3 (TimeDist (None, 4096, 96)          0         \n",
+      "time_distributed_3 (TimeDist (None, 4096, 6, 16)       2576      \n",
+      "_________________________________________________________________\n",
+      "time_distributed_4 (TimeDist (None, 4096, 96)          0         \n",
       "_________________________________________________________________\n",
       "bidirectional (Bidirectional (None, 4096, 256)         231424    \n",
       "_________________________________________________________________\n",
@@ -361,10 +389,10 @@
       "_________________________________________________________________\n",
       "bidirectional_2 (Bidirection (None, 4096, 256)         395264    \n",
       "_________________________________________________________________\n",
-      "time_distributed_4 (TimeDist (None, 4096, 3)           771       \n",
+      "time_distributed_5 (TimeDist (None, 4096, 3)           771       \n",
       "=================================================================\n",
-      "Total params: 1,024,559\n",
-      "Trainable params: 1,024,559\n",
+      "Total params: 1,030,799\n",
+      "Trainable params: 1,030,799\n",
       "Non-trainable params: 0\n",
       "_________________________________________________________________\n"
      ]
@@ -379,7 +407,7 @@
     "#     layers.ZeroPadding1D(padding=[0,3]),\n",
     "    layers.Reshape([4096,12,1]),\n",
     "    layers.TimeDistributed(layers.Conv1D(kernel_size=3, filters=32, activation=\"tanh\", padding=\"same\")),\n",
-    "#     layers.TimeDistributed(layers.Conv1D(kernel_size=32, filters=64, activation=\"tanh\", padding=\"same\")),\n",
+    "#     layers.TimeDistributed(layers.Conv1D(kernel_size=5, filters=32, activation=\"tanh\", padding=\"same\")),\n",
     "    \n",
     "    layers.TimeDistributed(layers.MaxPool1D()),\n",
     "    layers.TimeDistributed(layers.Conv1D(kernel_size=3, filters=16, activation=\"tanh\", padding=\"same\")),\n",
@@ -400,7 +428,7 @@
     "    \n",
     "    layers.TimeDistributed(layers.Dense(3, dtype=tf.float32)),\n",
     "])\n",
-    "opt = tf.keras.optimizers.Adam(learning_rate = 0.001)\n",
+    "opt = tf.keras.optimizers.Adam(learning_rate = 0.0001)\n",
     "\n",
     "model.compile(\n",
     "    optimizer=opt,\n",
@@ -412,7 +440,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "bd90ca8c",
+   "id": "3acd10c5",
    "metadata": {},
    "source": [
     "for x in train_ds:\n",
@@ -423,7 +451,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
+   "id": "38c9651d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# model=tf.keras.models.load_model(\"model2.h5\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
    "id": "cab5dadd",
    "metadata": {},
    "outputs": [],
@@ -434,7 +472,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 12,
    "id": "8068783c",
    "metadata": {},
    "outputs": [],
@@ -448,14 +486,13 @@
     "\n",
     "early_stop = tf.keras.callbacks.EarlyStopping(\n",
     "    monitor=\"val_loss\",\n",
-    "    min_delta = 0.0003,\n",
     "    mode=\"min\",\n",
     "    patience=10\n",
     ")\n",
     "\n",
     "model_checkpoint = tf.keras.callbacks.ModelCheckpoint(\n",
     "#     f\"{MDL_PATH}/model_{Params['version']:03}.h5\",\n",
-    "    \"./model.h5\",\n",
+    "    \"./model4.h5\",\n",
     "    monitor=\"val_loss\",\n",
     "    verbose=0,\n",
     "    save_best_only=True,\n",
@@ -470,7 +507,7 @@
   },
   {
    "cell_type": "raw",
-   "id": "613ecd42",
+   "id": "94024108",
    "metadata": {},
    "source": [
     "model.optimizer.learning_rate = model.optimizer.learning_rate / 10"
@@ -478,11 +515,19 @@
   },
   {
    "cell_type": "raw",
-   "id": "409ba9a8",
+   "id": "3f4b924e",
    "metadata": {},
    "source": [
     "model = tf.keras.models.load_model(\"model.h5\")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4b9f6def",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
@@ -497,35 +542,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/60\n",
-      "6054/6054 [==============================] - 2946s 485ms/step - loss: 0.0116 - mean_squared_error: 0.0116 - cosine_similarity: 0.0404 - val_loss: 0.0100 - val_mean_squared_error: 0.0100 - val_cosine_similarity: 0.0474\n",
-      "Epoch 2/60\n",
-      "6054/6054 [==============================] - 2994s 495ms/step - loss: 0.0090 - mean_squared_error: 0.0090 - cosine_similarity: 0.0626 - val_loss: 0.0075 - val_mean_squared_error: 0.0075 - val_cosine_similarity: 0.0871\n",
-      "Epoch 3/60\n",
-      "6054/6054 [==============================] - 2997s 495ms/step - loss: 0.0083 - mean_squared_error: 0.0083 - cosine_similarity: 0.0727 - val_loss: 0.0070 - val_mean_squared_error: 0.0070 - val_cosine_similarity: 0.0949\n",
-      "Epoch 4/60\n",
-      "6054/6054 [==============================] - 2989s 494ms/step - loss: 0.0069 - mean_squared_error: 0.0069 - cosine_similarity: 0.0969 - val_loss: 0.0065 - val_mean_squared_error: 0.0065 - val_cosine_similarity: 0.1011\n",
-      "Epoch 5/60\n",
-      "6054/6054 [==============================] - 2966s 490ms/step - loss: 0.0065 - mean_squared_error: 0.0065 - cosine_similarity: 0.1043 - val_loss: 0.0062 - val_mean_squared_error: 0.0062 - val_cosine_similarity: 0.1079\n",
-      "Epoch 6/60\n",
-      "6054/6054 [==============================] - 3000s 496ms/step - loss: 0.0062 - mean_squared_error: 0.0062 - cosine_similarity: 0.1089 - val_loss: 0.0060 - val_mean_squared_error: 0.0060 - val_cosine_similarity: 0.1144\n",
-      "Epoch 7/60\n",
-      "6054/6054 [==============================] - 3001s 496ms/step - loss: 0.0061 - mean_squared_error: 0.0061 - cosine_similarity: 0.1120 - val_loss: 0.0059 - val_mean_squared_error: 0.0059 - val_cosine_similarity: 0.1166\n",
-      "Epoch 8/60\n",
-      "6054/6054 [==============================] - 3003s 496ms/step - loss: 0.0059 - mean_squared_error: 0.0059 - cosine_similarity: 0.1142 - val_loss: 0.0058 - val_mean_squared_error: 0.0058 - val_cosine_similarity: 0.1171\n",
-      "Epoch 9/60\n",
-      "6054/6054 [==============================] - 3010s 497ms/step - loss: 0.0059 - mean_squared_error: 0.0059 - cosine_similarity: 0.1154 - val_loss: 0.0058 - val_mean_squared_error: 0.0058 - val_cosine_similarity: 0.1157\n",
-      "Epoch 10/60\n",
-      "6054/6054 [==============================] - 3057s 505ms/step - loss: 0.0058 - mean_squared_error: 0.0058 - cosine_similarity: 0.1173 - val_loss: 0.0058 - val_mean_squared_error: 0.0058 - val_cosine_similarity: 0.1144\n",
-      "Epoch 11/60\n",
-      "6054/6054 [==============================] - 3049s 504ms/step - loss: 0.0057 - mean_squared_error: 0.0057 - cosine_similarity: 0.1182 - val_loss: 0.0056 - val_mean_squared_error: 0.0056 - val_cosine_similarity: 0.1209\n",
-      "Epoch 12/60\n",
-      "6054/6054 [==============================] - 3020s 499ms/step - loss: 0.0057 - mean_squared_error: 0.0057 - cosine_similarity: 0.1187 - val_loss: 0.0056 - val_mean_squared_error: 0.0056 - val_cosine_similarity: 0.1223\n",
-      "Epoch 13/60\n",
-      "6054/6054 [==============================] - 3025s 500ms/step - loss: 0.0056 - mean_squared_error: 0.0056 - cosine_similarity: 0.1200 - val_loss: 0.0056 - val_mean_squared_error: 0.0056 - val_cosine_similarity: 0.1225\n",
-      "Epoch 14/60\n",
-      "6054/6054 [==============================] - 2993s 494ms/step - loss: 0.0056 - mean_squared_error: 0.0056 - cosine_similarity: 0.1208 - val_loss: 0.0056 - val_mean_squared_error: 0.0056 - val_cosine_similarity: 0.1224\n",
-      "Epoch 15/60\n",
-      "6054/6054 [==============================] - ETA: 0s - loss: 0.0055 - mean_squared_error: 0.0055 - cosine_similarity: 0.1216"
+      "4783/7421 [==================>...........] - ETA: 36:26 - loss: 0.0108 - mean_squared_error: 0.0108 - cosine_similarity: 0.0423"
      ]
     }
    ],
@@ -548,7 +565,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1224ec89",
+   "id": "901ae492",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -585,11 +602,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "e0514205",
+   "id": "9a926852",
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"model1.h5\")"
+    "model.save(\"model2.h5\")"
    ]
   }
  ],
