--- a/experimental/train.ipynb
+++ b/experimental/train.ipynb
@@ -695,7 +695,7 @@
     "    \"lr\": 1e-4 * REPLICAS,\n",
     "    \"version\": VER,\n",
     "    \"train_mode\": \"full\", #test, full\n",
-    "    \"batch_size\": 256 * REPLICAS,\n",
+    "    \"batch_size\": 128 * REPLICAS,\n",
     "    \"epochs\":35,\n",
     "    \"seed\": 42,\n",
     "    \"changelog\": \"second run with adam\",\n",
@@ -1560,8 +1560,7 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {
     "execution": {
      "iopub.execute_input": "2021-09-17T17:22:54.972832Z",
@@ -1569,16 +1568,6 @@
     },
     "scrolled": true
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Train on 2050 steps, validate on 136 steps\n",
-      "Epoch 1/35\n"
-     ]
-    }
-   ],
    "source": [
     "history = model.fit(train_ds, validation_data = val_ds, epochs = Params[\"epochs\"], shuffle=True,\n",
     "                    steps_per_epoch = steps_per_epoch, validation_steps=validation_steps,\n",
@@ -1605,10 +1594,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(\n",
     "    monitor=\"val_loss\", factor=0.2,\n",
@@ -1648,21 +1635,22 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "with strategy.scope():\n",
-    "    pre_filter.trainable=True\n",
+    "    \n",
     "    for layer in model.layers:\n",
     "        layer.trainable=False\n",
-    "    for layer in pre_filter.layers[6:-1]\n",
+    "    pre_filter.trainable=True\n",
+    "    for i,layer in enumerate(pre_filter.layers[6:]):\n",
+    "        print(i, layer)\n",
     "        layer.trainable=False\n",
     "    \n",
     "\n",
     "    opt = tfa.optimizers.Lookahead(\n",
-    "        tfa.optimizers.AdamW(lr_decayed_fn, learning_rate = 5e-4),\n",
+    "#         tfa.optimizers.AdamW(lr_decayed_fn, learning_rate = 1e-3),\n",
+    "        tf.keras.optimizers.Adam(learning_rate=1e-3),\n",
     "        sync_period=6\n",
     "    )\n",
     "    loss = tf.keras.losses.BinaryCrossentropy(from_logits=False)\n",
@@ -1681,10 +1669,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "raw",
    "metadata": {},
-   "outputs": [],
    "source": [
     "history2 = model.fit(train_ds, validation_data = val_ds, epochs = Params[\"epochs\"], shuffle=True,\n",
     "                    steps_per_epoch = steps_per_epoch, validation_steps=validation_steps,\n",
@@ -1702,16 +1688,101 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 20,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Model: \"sequential\"\n",
+      "_________________________________________________________________\n",
+      "Layer (type)                 Output Shape              Param #   \n",
+      "=================================================================\n",
+      "sequential (Sequential)      (None, 4096, 3)           1024559   \n",
+      "_________________________________________________________________\n",
+      "conv1d (Conv1D)              (None, 4096, 192)         12480     \n",
+      "_________________________________________________________________\n",
+      "batch_normalization (BatchNo (None, 4096, 192)         768       \n",
+      "_________________________________________________________________\n",
+      "activation (Activation)      (None, 4096, 192)         0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_1 (Conv1D)            (None, 4096, 64)          393280    \n",
+      "_________________________________________________________________\n",
+      "max_pooling1d (MaxPooling1D) (None, 512, 64)           0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_1 (Batch (None, 512, 64)           256       \n",
+      "_________________________________________________________________\n",
+      "activation_1 (Activation)    (None, 512, 64)           0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_2 (Conv1D)            (None, 512, 128)          262272    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_2 (Batch (None, 512, 128)          512       \n",
+      "_________________________________________________________________\n",
+      "activation_2 (Activation)    (None, 512, 128)          0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_3 (Conv1D)            (None, 512, 128)          262272    \n",
+      "_________________________________________________________________\n",
+      "average_pooling1d (AveragePo (None, 85, 128)           0         \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_3 (Batch (None, 85, 128)           512       \n",
+      "_________________________________________________________________\n",
+      "activation_3 (Activation)    (None, 85, 128)           0         \n",
+      "_________________________________________________________________\n",
+      "conv1d_4 (Conv1D)            (None, 85, 256)           524544    \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_4 (Batch (None, 85, 256)           1024      \n",
+      "_________________________________________________________________\n",
+      "activation_4 (Activation)    (None, 85, 256)           0         \n",
+      "_________________________________________________________________\n",
+      "flatten (Flatten)            (None, 21760)             0         \n",
+      "_________________________________________________________________\n",
+      "dense (Dense)                (None, 64)                1392704   \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_5 (Batch (None, 64)                256       \n",
+      "_________________________________________________________________\n",
+      "dropout (Dropout)            (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "activation_5 (Activation)    (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_1 (Dense)              (None, 64)                4160      \n",
+      "_________________________________________________________________\n",
+      "batch_normalization_6 (Batch (None, 64)                256       \n",
+      "_________________________________________________________________\n",
+      "dropout_1 (Dropout)          (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "activation_6 (Activation)    (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dropout_2 (Dropout)          (None, 64)                0         \n",
+      "_________________________________________________________________\n",
+      "dense_2 (Dense)              (None, 1)                 65        \n",
+      "_________________________________________________________________\n",
+      "activation_7 (Activation)    (None, 1)                 0         \n",
+      "=================================================================\n",
+      "Total params: 3,879,920\n",
+      "Trainable params: 3,878,128\n",
+      "Non-trainable params: 1,792\n",
+      "_________________________________________________________________\n"
+     ]
+    }
+   ],
    "source": [
     "with strategy.scope():\n",
+    "    pre_filter.trainable=False\n",
     "    for layer in model.layers:\n",
-    "        layer.trainable=True    \n",
+    "        layer.trainable=True\n",
+    "    for layer in pre_filter.layers:\n",
+    "        layer.trainable=True\n",
+    "    \n",
+    "#     for i,layer in enumerate(pre_filter.layers[6:]):\n",
+    "#         print(i, layer)\n",
+    "#         layer.trainable=False\n",
     "\n",
     "    opt = tfa.optimizers.Lookahead(\n",
-    "        tfa.optimizers.AdamW(lr_decayed_fn, learning_rate = 1e-5),\n",
+    "#         tfa.optimizers.AdamW(lr_decayed_fn, learning_rate = 1e-4),\n",
+    "        tf.keras.optimizers.Adam(learning_rate=1e-5),\n",
     "        sync_period=6\n",
     "    )\n",
     "    loss = tf.keras.losses.BinaryCrossentropy(from_logits=False)\n",
@@ -1726,15 +1797,59 @@
     "    model.summary()\n",
     "    # model is loaded from checkpoint to get the best performing model\n",
     "    # hopefully alleviating some overfitting\n",
-    "    model.load_weights(f\"{MDL_PATH}/model_{Params['version']:03}_2.h5\")\n",
+    "    model.load_weights(f\"{MDL_PATH}/model_{Params['version']:03}.h5\".replace(f\"{VER:03}\",\"446\"))\n",
     "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# tf.keras.backend.clear_session()"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Train on 4101 steps, validate on 273 steps\n",
+      "Epoch 1/35\n",
+      "4101/4101 [==============================] - ETA: 0s - batch: 2050.0000 - size: 1.0000 - loss: 0.4706 - auc_1: 0.8318"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\apist\\anaconda3\\envs\\g2net-tf\\lib\\site-packages\\keras\\engine\\training.py:2470: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
+      "  warnings.warn('`Model.state_updates` will be removed in a future version. '\n"
+     ]
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4101/4101 [==============================] - 2647s 625ms/step - batch: 2050.0000 - size: 1.0000 - loss: 0.4706 - auc_1: 0.8318 - val_loss: 0.5527 - val_auc_1: 0.7827 - lr: 1.0000e-05\n",
+      "Epoch 2/35\n",
+      "4101/4101 [==============================] - 2597s 633ms/step - batch: 2050.0000 - size: 1.0000 - loss: 0.4641 - auc_1: 0.8365 - val_loss: 0.5438 - val_auc_1: 0.8081 - lr: 1.0000e-05\n",
+      "Epoch 3/35\n",
+      "4101/4101 [==============================] - 2594s 632ms/step - batch: 2050.0000 - size: 1.0000 - loss: 0.4600 - auc_1: 0.8395 - val_loss: 0.5229 - val_auc_1: 0.7987 - lr: 1.0000e-05\n",
+      "Epoch 4/35\n",
+      "4101/4101 [==============================] - 2508s 612ms/step - batch: 2050.0000 - size: 1.0000 - loss: 0.4565 - auc_1: 0.8421 - val_loss: 0.5171 - val_auc_1: 0.8029 - lr: 1.0000e-05\n",
+      "Epoch 5/35\n",
+      "4101/4101 [==============================] - 2458s 599ms/step - batch: 2050.0000 - size: 1.0000 - loss: 0.4538 - auc_1: 0.8443 - val_loss: 0.5088 - val_auc_1: 0.8144 - lr: 1.0000e-05\n",
+      "Epoch 6/35\n",
+      "3332/4101 [=======================>......] - ETA: 7:35 - batch: 1665.5000 - size: 1.0000 - loss: 0.4519 - auc_1: 0.8455"
+     ]
+    }
+   ],
    "source": [
     "history2 = model.fit(train_ds, validation_data = val_ds, epochs = Params[\"epochs\"], shuffle=True,\n",
     "                    steps_per_epoch = steps_per_epoch, validation_steps=validation_steps,\n",
