--- a/experimental/train.ipynb
+++ b/experimental/train.ipynb
@@ -313,19 +313,6 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>42</th>\n",
-       "      <td>0.00010</td>\n",
-       "      <td>164</td>\n",
-       "      <td>full</td>\n",
-       "      <td>256</td>\n",
-       "      <td>100</td>\n",
-       "      <td>9</td>\n",
-       "      <td>0.438891</td>\n",
-       "      <td>0.844589</td>\n",
-       "      <td>1/4 lr</td>\n",
-       "      <td>42.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
        "      <th>43</th>\n",
        "      <td>0.00001</td>\n",
        "      <td>200</td>\n",
@@ -572,13 +559,25 @@
        "      <td>using 1e-5 initial lr</td>\n",
        "      <td>1111.0</td>\n",
        "    </tr>\n",
+       "    <tr>\n",
+       "      <th>62</th>\n",
+       "      <td>0.00010</td>\n",
+       "      <td>480</td>\n",
+       "      <td>full</td>\n",
+       "      <td>256</td>\n",
+       "      <td>35</td>\n",
+       "      <td>7</td>\n",
+       "      <td>0.457760</td>\n",
+       "      <td>0.836264</td>\n",
+       "      <td>simple detection network with same pre-process...</td>\n",
+       "      <td>1111.0</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
        "         lr  version train_mode  batch_size  epochs  bavg_epoch  bavg_loss  \\\n",
-       "42  0.00010      164       full         256     100           9   0.438891   \n",
        "43  0.00001      200       full         256     100          36   0.464103   \n",
        "44  0.00100      210       full         256     100          24   0.444001   \n",
        "45  0.00010      221       full         256     100          40   0.435199   \n",
@@ -598,9 +597,9 @@
        "59  0.00005      474       full         256      80          10   0.412824   \n",
        "60  0.00010      475       full         256      80          11   0.409763   \n",
        "61  0.00001      476       full         256      80          15   0.439726   \n",
+       "62  0.00010      480       full         256      35           7   0.457760   \n",
        "\n",
        "    bavg_auc                                          changelog     seed  \n",
-       "42  0.844589                                             1/4 lr     42.0  \n",
        "43  0.839057                                             1/4 lr     42.0  \n",
        "44  0.847384                                             1/4 lr     42.0  \n",
        "45  0.850387                                             1/4 lr     69.0  \n",
@@ -619,7 +618,8 @@
        "58  0.859984          no whitening only lowpass & normalization     42.0  \n",
        "59  0.855606          no whitening only lowpass & normalization   1111.0  \n",
        "60  0.853231                              using 1e-4 initial lr   1111.0  \n",
-       "61  0.847705                              using 1e-5 initial lr   1111.0  "
+       "61  0.847705                              using 1e-5 initial lr   1111.0  \n",
+       "62  0.836264  simple detection network with same pre-process...   1111.0  "
       ]
      },
      "execution_count": 6,
@@ -1233,7 +1233,7 @@
     }
    ],
    "source": [
-    "pre_filter = tf.keras.models.load_model(\"model4.h5\")\n",
+    "pre_filter = tf.keras.models.load_model(\"model5.h5\")\n",
     "pre_filter.trainable=False\n",
     "pre_filter.summary()"
    ]
@@ -1531,7 +1531,7 @@
    "source": [
     "reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(\n",
     "    monitor=\"val_loss\", factor=0.2,\n",
-    "    patience=4, min_lr = 0.0000001,\n",
+    "    patience=6, min_lr = 1e-7,\n",
     "    verbose=1\n",
     ")\n",
     "\n",
@@ -1539,7 +1539,7 @@
     "    monitor=\"val_loss\",\n",
     "    min_delta = 0.0003,\n",
     "    mode=\"min\",\n",
-    "    patience=6\n",
+    "    patience=10\n",
     ")\n",
     "\n",
     "model_checkpoint = tf.keras.callbacks.ModelCheckpoint(\n",
@@ -1584,52 +1584,7 @@
       "\n",
       "Epoch 00001: LearningRateScheduler setting learning rate to 1e-05.\n",
       "Epoch 1/35\n",
-      "1914/1914 [==============================] - ETA: 0s - batch: 956.5000 - size: 1.0000 - loss: 0.6980 - auc: 0.7125"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "C:\\Users\\apist\\anaconda3\\envs\\g2net-tf\\lib\\site-packages\\keras\\engine\\training.py:2470: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
-      "  warnings.warn('`Model.state_updates` will be removed in a future version. '\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1914/1914 [==============================] - 1176s 555ms/step - batch: 956.5000 - size: 1.0000 - loss: 0.6980 - auc: 0.7125 - val_loss: 0.5527 - val_auc: 0.7847 - lr: 1.0000e-05\n",
-      "\n",
-      "Epoch 00002: LearningRateScheduler setting learning rate to 1e-05.\n",
-      "Epoch 2/35\n",
-      "1914/1914 [==============================] - 1039s 543ms/step - batch: 956.5000 - size: 1.0000 - loss: 0.5184 - auc: 0.7978 - val_loss: 0.5198 - val_auc: 0.8109 - lr: 1.0000e-05\n",
-      "\n",
-      "Epoch 00003: LearningRateScheduler setting learning rate to 0.0001.\n",
-      "Epoch 3/35\n",
-      "1914/1914 [==============================] - 1068s 558ms/step - batch: 956.5000 - size: 1.0000 - loss: 0.4929 - auc: 0.8173 - val_loss: 0.5871 - val_auc: 0.8155 - lr: 1.0000e-04\n",
-      "\n",
-      "Epoch 00004: LearningRateScheduler setting learning rate to 0.0001.\n",
-      "Epoch 4/35\n",
-      "1914/1914 [==============================] - 1071s 559ms/step - batch: 956.5000 - size: 1.0000 - loss: 0.4738 - auc: 0.8302 - val_loss: 0.5961 - val_auc: 0.8149 - lr: 1.0000e-04\n",
-      "\n",
-      "Epoch 00005: LearningRateScheduler setting learning rate to 0.0001.\n",
-      "Epoch 5/35\n",
-      "1914/1914 [==============================] - 1052s 550ms/step - batch: 956.5000 - size: 1.0000 - loss: 0.4646 - auc: 0.8354 - val_loss: 0.6255 - val_auc: 0.8307 - lr: 1.0000e-04\n",
-      "\n",
-      "Epoch 00006: LearningRateScheduler setting learning rate to 0.00019466666666666666.\n",
-      "Epoch 6/35\n",
-      "1914/1914 [==============================] - ETA: 0s - batch: 956.5000 - size: 1.0000 - loss: 0.4641 - auc: 0.8352\n",
-      "Epoch 00006: ReduceLROnPlateau reducing learning rate to 3.8933331961743536e-05.\n",
-      "1914/1914 [==============================] - 1052s 550ms/step - batch: 956.5000 - size: 1.0000 - loss: 0.4641 - auc: 0.8352 - val_loss: 0.7516 - val_auc: 0.8037 - lr: 1.9467e-04\n",
-      "\n",
-      "Epoch 00007: LearningRateScheduler setting learning rate to 0.00028933333333333334.\n",
-      "Epoch 7/35\n",
-      "1914/1914 [==============================] - 1072s 560ms/step - batch: 956.5000 - size: 1.0000 - loss: 0.4608 - auc: 0.8370 - val_loss: 0.6010 - val_auc: 0.8183 - lr: 2.8933e-04\n",
-      "\n",
-      "Epoch 00008: LearningRateScheduler setting learning rate to 0.000384.\n",
-      "Epoch 8/35\n",
-      "1914/1914 [==============================] - ETA: 0s - batch: 956.5000 - size: 1.0000 - loss: 0.4578 - auc: 0.8391"
+      "1656/1914 [========================>.....] - ETA: 2:11 - batch: 827.5000 - size: 1.0000 - loss: 0.5828 - auc: 0.7427"
      ]
     }
    ],
@@ -1770,7 +1725,7 @@
     "\n",
     "    opt = tfa.optimizers.Lookahead(\n",
     "#         tfa.optimizers.AdamW(lr_decayed_fn, learning_rate = 1e-4),\n",
-    "        tf.keras.optimizers.Adam(learning_rate=1e-5),\n",
+    "        tf.keras.optimizers.Adam(learning_rate=5e-6),\n",
     "        sync_period=6\n",
     "    )\n",
     "    loss = tf.keras.losses.BinaryCrossentropy(from_logits=False)\n",
@@ -1833,8 +1788,10 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "historyFrame2 = pd.DataFrame(history2.history)\n",
     "historyFrame2[[\"auc_1\", \"val_auc_1\"]].plot()\n",
@@ -1876,12 +1833,14 @@
    ]
   },
   {
-   "cell_type": "raw",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
-    "best_epoch = historyFrame2.val_auc.argmax()\n",
+    "best_epoch = historyFrame2.val_auc_1.argmax()\n",
     "best_loss = historyFrame2.iloc[best_epoch].loss\n",
-    "best_auc = historyFrame2.iloc[best_epoch].val_auc\n",
+    "best_auc = historyFrame2.iloc[best_epoch].val_auc_1\n",
     "print(\"best epoch:\", best_epoch,\n",
     "      \"| best loss:\", best_loss,\n",
     "      \"| best auc:\", best_auc\n",
