--- a/experimental/train_filter.ipynb
+++ b/experimental/train_filter.ipynb
@@ -351,7 +351,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "WARNING:tensorflow:From C:\\Users\\apist\\AppData\\Local\\Temp/ipykernel_29068/867815235.py:16: The name tf.keras.layers.CuDNNLSTM is deprecated. Please use tf.compat.v1.keras.layers.CuDNNLSTM instead.\n",
+      "WARNING:tensorflow:From C:\\Users\\apist\\AppData\\Local\\Temp/ipykernel_15740/3059621478.py:16: The name tf.keras.layers.CuDNNLSTM is deprecated. Please use tf.compat.v1.keras.layers.CuDNNLSTM instead.\n",
       "\n",
       "Model: \"sequential\"\n",
       "_________________________________________________________________\n",
@@ -446,14 +446,14 @@
     "from tensorflow.keras.callbacks import *\n",
     "reduce_lr = tf.keras.callbacks.ReduceLROnPlateau(\n",
     "    monitor=\"val_loss\", factor=0.2,\n",
-    "    patience=3, min_lr = 0.000001,\n",
+    "    patience=6, min_lr = 1e-7,\n",
     "    verbose=1\n",
     ")\n",
     "\n",
     "early_stop = tf.keras.callbacks.EarlyStopping(\n",
     "    monitor=\"val_loss\",\n",
     "    mode=\"min\",\n",
-    "    patience=5\n",
+    "    patience=10\n",
     ")\n",
     "\n",
     "model_checkpoint = tf.keras.callbacks.ModelCheckpoint(\n",
@@ -492,21 +492,7 @@
      "output_type": "stream",
      "text": [
       "Epoch 1/60\n",
-      "1074/1074 [==============================] - 1201s 1s/step - loss: 0.0114 - mean_squared_error: 0.0114 - cosine_similarity: 0.0146 - val_loss: 0.0112 - val_mean_squared_error: 0.0112 - val_cosine_similarity: 0.0181\n",
-      "Epoch 2/60\n",
-      "1074/1074 [==============================] - 1162s 1s/step - loss: 0.0113 - mean_squared_error: 0.0113 - cosine_similarity: 0.0130 - val_loss: 0.0112 - val_mean_squared_error: 0.0112 - val_cosine_similarity: 0.0051\n",
-      "Epoch 3/60\n",
-      "1074/1074 [==============================] - 1166s 1s/step - loss: 0.0115 - mean_squared_error: 0.0115 - cosine_similarity: 0.0055 - val_loss: 0.0112 - val_mean_squared_error: 0.0112 - val_cosine_similarity: 0.0046\n",
-      "Epoch 4/60\n",
-      "1074/1074 [==============================] - 1177s 1s/step - loss: 0.0114 - mean_squared_error: 0.0114 - cosine_similarity: 0.0095 - val_loss: 0.0111 - val_mean_squared_error: 0.0111 - val_cosine_similarity: 0.0107\n",
-      "\n",
-      "Epoch 00004: ReduceLROnPlateau reducing learning rate to 0.00020000000949949026.\n",
-      "Epoch 5/60\n",
-      "1074/1074 [==============================] - 1175s 1s/step - loss: 0.0107 - mean_squared_error: 0.0107 - cosine_similarity: 0.0194 - val_loss: 0.0106 - val_mean_squared_error: 0.0106 - val_cosine_similarity: 0.0193\n",
-      "Epoch 6/60\n",
-      "1074/1074 [==============================] - 1177s 1s/step - loss: 0.0103 - mean_squared_error: 0.0103 - cosine_similarity: 0.0246 - val_loss: 0.0104 - val_mean_squared_error: 0.0104 - val_cosine_similarity: 0.0224\n",
-      "Epoch 7/60\n",
-      " 333/1074 [========>.....................] - ETA: 13:23 - loss: 0.0101 - mean_squared_error: 0.0101 - cosine_similarity: 0.0260"
+      " 588/1074 [===============>..............] - ETA: 7:55 - loss: 0.0115 - mean_squared_error: 0.0115 - cosine_similarity: 0.0109"
      ]
     }
    ],
@@ -578,7 +564,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "model.save(\"model5.h5\")"
+    "model.save(\"model6.h5\")"
    ]
   },
   {
