--- a/experimental/train.ipynb
+++ b/experimental/train.ipynb
@@ -1584,7 +1584,15 @@
       "\n",
       "Epoch 00001: LearningRateScheduler setting learning rate to 1e-05.\n",
       "Epoch 1/35\n",
-      "1656/1914 [========================>.....] - ETA: 2:11 - batch: 827.5000 - size: 1.0000 - loss: 0.5828 - auc: 0.7427"
+      "1914/1914 [==============================] - ETA: 0s - batch: 956.5000 - size: 1.0000 - loss: 0.5762 - auc: 0.7473"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "C:\\Users\\apist\\anaconda3\\envs\\g2net-tf\\lib\\site-packages\\keras\\engine\\training.py:2470: UserWarning: `Model.state_updates` will be removed in a future version. This property should not be used in TensorFlow 2.0, as `updates` are applied automatically.\n",
+      "  warnings.warn('`Model.state_updates` will be removed in a future version. '\n"
      ]
     }
    ],
